// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content in browser assignable user renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  border: none;
  line-height: 1.6rem;
  font-size: 1.4rem;
  color: #ffffff;
  background-color: #007297;
  cursor: pointer;
}

.c0:hover {
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.3);
}

.c0[data-focused],
.c0[data-focus-visible] {
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  outline-offset: 0.2rem;
}

.c0 svg {
  width: 1.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  border: none;
  line-height: 1.6rem;
  font-size: 1.4rem;
  color: #ffffff;
  background-color: #007297;
  cursor: pointer;
}

.c0:hover {
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.3);
}

.c0[data-focused],
.c0[data-focus-visible] {
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  outline-offset: 0.2rem;
}

.c0 svg {
  width: 1.5rem;
}

<div
  className="navbar-bar-wrapper"
  data-analytics-region="openstax-navbar"
  style={
    Object {
      "--navbar-bg": "#fff",
      "--navbar-padding-desktop": "3.2rem",
      "--navbar-padding-mobile": "1.6rem",
      "--navbar-z-index": 70,
    }
  }
>
  <div
    className="navbar-topbar"
    data-testid="navbar"
    style={
      Object {
        "--navbar-height-desktop": "6rem",
        "--navbar-height-mobile": "5.2rem",
        "--navbar-max-width": "128rem",
      }
    }
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="navbar-header-image"
        src="logo.svg"
        style={
          Object {
            "--navbar-logo-height-desktop": "3.5rem",
            "--navbar-logo-height-mobile": "2.8rem",
          }
        }
      />
    </a>
    <div
      className="navbar-dropdown-container"
      data-testid="user-nav"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="Account actions"
        className="c0"
        data-rac=""
        data-react-aria-pressable={true}
        data-testid="user-nav-toggle"
        id="react-aria-1"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`content in browser matches snapshot for logged out 1`] = `
<div
  className="navbar-bar-wrapper"
  data-analytics-region="openstax-navbar"
  style={
    Object {
      "--navbar-bg": "#fff",
      "--navbar-padding-desktop": "3.2rem",
      "--navbar-padding-mobile": "1.6rem",
      "--navbar-z-index": 70,
    }
  }
>
  <div
    className="navbar-topbar"
    data-testid="navbar"
    style={
      Object {
        "--navbar-height-desktop": "6rem",
        "--navbar-height-mobile": "5.2rem",
        "--navbar-max-width": "128rem",
      }
    }
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="navbar-header-image"
        src="logo.svg"
        style={
          Object {
            "--navbar-logo-height-desktop": "3.5rem",
            "--navbar-logo-height-mobile": "2.8rem",
          }
        }
      />
    </a>
    <a
      className="navbar-link"
      data-analytics-label="login"
      data-testid="nav-login"
      href="/accounts/login?r=/"
      style={
        Object {
          "--nav-border-color": "#63a524",
          "--nav-text-color": "#5e6062",
          "--nav-text-hover": "#424242",
        }
      }
    >
      Log in
    </a>
  </div>
</div>
`;

exports[`content in browser matches snapshot for null state 1`] = `
<div
  className="navbar-bar-wrapper"
  data-analytics-region="openstax-navbar"
  style={
    Object {
      "--navbar-bg": "#fff",
      "--navbar-padding-desktop": "3.2rem",
      "--navbar-padding-mobile": "1.6rem",
      "--navbar-z-index": 70,
    }
  }
>
  <div
    className="navbar-topbar"
    data-testid="navbar"
    style={
      Object {
        "--navbar-height-desktop": "6rem",
        "--navbar-height-mobile": "5.2rem",
        "--navbar-max-width": "128rem",
      }
    }
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="navbar-header-image"
        src="logo.svg"
        style={
          Object {
            "--navbar-logo-height-desktop": "3.5rem",
            "--navbar-logo-height-mobile": "2.8rem",
          }
        }
      />
    </a>
  </div>
</div>
`;

exports[`content in browser when logged in matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  border: none;
  line-height: 1.6rem;
  font-size: 1.4rem;
  color: #ffffff;
  background-color: #007297;
  cursor: pointer;
}

.c0:hover {
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.3);
}

.c0[data-focused],
.c0[data-focus-visible] {
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  outline-offset: 0.2rem;
}

.c0 svg {
  width: 1.5rem;
}

<div
  className="navbar-bar-wrapper"
  data-analytics-region="openstax-navbar"
  style={
    Object {
      "--navbar-bg": "#fff",
      "--navbar-padding-desktop": "3.2rem",
      "--navbar-padding-mobile": "1.6rem",
      "--navbar-z-index": 70,
    }
  }
>
  <div
    className="navbar-topbar"
    data-testid="navbar"
    style={
      Object {
        "--navbar-height-desktop": "6rem",
        "--navbar-height-mobile": "5.2rem",
        "--navbar-max-width": "128rem",
      }
    }
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="navbar-header-image"
        src="logo.svg"
        style={
          Object {
            "--navbar-logo-height-desktop": "3.5rem",
            "--navbar-logo-height-mobile": "2.8rem",
          }
        }
      />
    </a>
    <div
      className="navbar-dropdown-container"
      data-testid="user-nav"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="Account actions"
        className="c0"
        data-rac=""
        data-react-aria-pressable={true}
        data-testid="user-nav-toggle"
        id="react-aria-1"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        TT
      </button>
    </div>
  </div>
</div>
`;
